Fix horizontal scrolling on mobile (<480px)

--- a/client/src/components/navbar.scss
+++ b/client/src/components/navbar.scss
@@ -29,7 +29,7 @@
   .navigation-menu ul {
     flex-direction: column;
     position: absolute;
-    top: 4rem;
+    top: 4.6rem;
     left: 0;
     width: 100%;
     height: calc(100vh - 60px);
